onesg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onesg-service
spec:
  selector:
    app: onesg
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8888
  type: LoadBalancer
