onesg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onesg
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "34.95.90.123"
  labels:
    app: onesg
spec:
  defaultBackend:
    service:
      name: onesg-backend
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: onesg-backend
  labels:
    app: onesg
spec:
  type: NodePort
  selector:
    app: onesg
  ports:
  - port: 80
    targetPort: 5000
